# Job-Parser

./: README.md  pyproject.toml
main/: jsonsaver.py  main.py  utils.py  vacation.py  vacations_API.py
