[tool.poetry]
name = "course-work-4-project"
version = "0.1.0"
description = ""
authors = ["eliseev <twicheg@gmail.com>"]
readme = "README.md"
packages = [{include = "course_work_4_project"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
